# Rust-Resource-Loader-Library

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: CONTRIBUTING.md  SUPPORT.md
src/: exception.rs  identifiers.rs  lib.rs  resources.rs
src/identifiers/: identifier.rs  path.rs  resource.rs  uri.rs
src/resources/: embedded.rs  path.rs  resource.rs  uri.rs
tests/: embedded_tests.rs  path_tests.rs  uri_tests.rs
