[package]
name = "resource-loader"
version = "0.1.0"
authors = ["Akazukin-Team"]

edition = "2024"
rust-version = "1.93.0"

description = "A loader library for files, uri and resource."
repository = "https://github.com/Akazukin-Team/Rust-Resource-Library.git"


[dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
